--- a/Kiba/Base.lproj/Main.storyboard
+++ b/Kiba/Base.lproj/Main.storyboard
@@ -207,10 +207,10 @@
             </objects>
             <point key="canvasLocation" x="156" y="2610"/>
         </scene>
-        <!--View Controller-->
+        <!--Finance Controller-->
         <scene sceneID="Il2-Qh-Dnv">
             <objects>
-                <viewController storyboardIdentifier="finance" id="7QG-TT-5KV" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="finance" id="7QG-TT-5KV" customClass="KBAFinanceController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0v6-6k-oBZ"/>
                         <viewControllerLayoutGuide type="bottom" id="cTW-yL-T7V"/>
@@ -224,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="csg-pM-Bnp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1092" y="2610"/>
+            <point key="canvasLocation" x="1068" y="2610"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ykX-dz-3oR">
