--- a/Kiba/View/Auth/KBAAuthController.xib
+++ b/Kiba/View/Auth/KBAAuthController.xib
@@ -16,13 +16,13 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Jetzt Authentifizieren!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BJ-4b-CL8">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" text="Jetzt Authentifizieren!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BJ-4b-CL8">
                     <rect key="frame" x="301" y="90" width="207" height="27"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RTi-eO-wPU">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RTi-eO-wPU">
                     <rect key="frame" x="600" y="626" width="94" height="38"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
@@ -34,12 +34,9 @@
                         <action selector="validate:" destination="-1" eventType="touchUpInside" id="ibK-oY-rQT"/>
                     </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggk-1H-ANl" customClass="JVFloatLabeledTextField">
-                    <rect key="frame" x="84" y="630" width="493" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggk-1H-ANl" customClass="JVFloatLabeledTextField">
+                    <rect key="frame" x="84" y="630" width="377" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="493" id="vDJ-Fy-Ogh"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -50,7 +47,7 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dru-38-HID">
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dru-38-HID">
                     <rect key="frame" x="84" y="169" width="700" height="410"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -106,24 +103,9 @@
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="410" id="37M-ij-tsZ"/>
-                        <constraint firstAttribute="width" constant="700" id="VJ7-T2-CT7"/>
-                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstItem="RTi-eO-wPU" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="trailing" constant="23" id="3Ew-wM-1xF"/>
-                <constraint firstAttribute="centerX" secondItem="Dru-38-HID" secondAttribute="centerX" constant="78" id="GL3-56-tHN"/>
-                <constraint firstItem="ggk-1H-ANl" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="84" id="I0A-Vk-o6n"/>
-                <constraint firstItem="Dru-38-HID" firstAttribute="top" secondItem="3BJ-4b-CL8" secondAttribute="bottom" constant="52" id="Lz6-lc-3CF"/>
-                <constraint firstItem="Dru-38-HID" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="84" id="V5z-t3-uhn"/>
-                <constraint firstItem="ggk-1H-ANl" firstAttribute="top" secondItem="Dru-38-HID" secondAttribute="bottom" constant="51" id="Z00-Ku-Hzx"/>
-                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="bottom" constant="-34" id="Z8J-K4-bxt"/>
-                <constraint firstItem="3BJ-4b-CL8" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="301" id="oME-Oj-MZX"/>
-                <constraint firstItem="3BJ-4b-CL8" firstAttribute="top" secondItem="2" secondAttribute="top" constant="90" id="pze-NC-mCy"/>
-            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
         </view>
